(Fix) Fix issue with background being cut off when content stretches beyond the viewport height

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,10 +1,8 @@
 .teacherDashboard, .classroomDashboard, .reportsDashboard{
-  /*font-family: 'Press Start 2P', cursive;*/
-/*  background-image: url("../assets/background.png");
-  background-repeat: no-repeat;*/
   background-size: cover;
   background: url("../assets/background.png") no-repeat center center fixed;
   height: 100vh;
+  overflow: scroll;
 }
 
 a, a:visited, a:hover, a:active {
